<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dmitriev.ivand.divider.ActivityResult">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/your_result_is"
        android:textSize="@dimen/large"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint="9 / 10"
        android:textColor="@color/mainButtons"
        android:textAlignment="center"
        android:textSize="@dimen/header"/>

    <TextView
        android:id="@+id/result_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textColor="@color/header"
        android:textAlignment="center"
        android:textSize="@dimen/big"/>

    <Button
        android:id="@+id/try_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/big"
        android:width="200dp"
        android:layout_below="@+id/result_disclaimer"
        android:layout_centerHorizontal="true"
        android:background="@drawable/yesbutton"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/main_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_menu"
        android:textAllCaps="false"
        android:textColor="@color/mainButtons"
        android:textSize="@dimen/big"
        android:width="200dp"
        android:layout_below="@+id/try_again_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mainbuttons"
        android:visibility="invisible"/>

</RelativeLayout>
